<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrol_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/detailsElementBackground"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:padding="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/rl_expense_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_card"
        android:elevation="5dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_clear_primary_light_24dp" />

        <LinearLayout
            android:id="@+id/ll_action_type_btns"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rl_new_action">

            <Button
                android:id="@+id/btn_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_bg"
                android:drawableStart="@drawable/ic_add_shopping_cart_white_24dp"
                android:paddingHorizontal="20dp"
                android:text="@string/btn_expense"
                android:textColor="@android:color/white"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/selector_btn_bg"
                android:drawableStart="@drawable/ic_archive_white_24dp"
                android:paddingHorizontal="20dp"
                android:text="@string/btn_income"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rl_new_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">


            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/label_new_income"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/container_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_label"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_sum"
                    style="@style/Widget.CoinSpace.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:hint="@string/lbl_sum">

                    <EditText
                        android:id="@+id/et_sum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="13"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/set_periodic_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:paddingEnd="25dp"
                    android:paddingStart="30dp"
                    android:src="@drawable/repeat_operation" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/account_spinner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_tv"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_account_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_account_label"
                    android:textColor="@color/colorGray"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/accounts_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_spinner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_spinner_container"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category_label"
                    android:textColor="@color/colorGray"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/currency_spinner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_spinner_container"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_currency_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_currency_label"
                    android:textColor="@color/colorGray"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/currency_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_desc"
                    style="@style/Widget.CoinSpace.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:hint="@string/description">

                    <EditText
                        android:id="@+id/et_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textAutoCorrect|textAutoComplete"
                        android:maxLength="13"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

