...
            android:gravity="fill_vertical"
            android:lines="2"
            android:text="gjvsk"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.35"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.15"
            android:text="RUR"
            android:textSize="18sp" />
...
