...

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/accounts_viewpager"
                android:layout_width="match_parent"
                android:layout_height="140dp" />

            <android.support.design.widget.TabLayout
                android:id="@+id/accounts_tabDots"
                android:layout_width="match_parent"
...
            android:textSize="22sp" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_32dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
...
