...

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_additional_cur_balance"
            android:layout_alignStart="@+id/show_periodic_transaction"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp"
            android:src="@drawable/ic_search_black_24dp" />

        <ImageButton
            android:id="@+id/show_periodic_transaction"
...
